--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "express": "4.17.1",
     "helmet": "4.6.0",
@@ -28,6 +29,6 @@
     "eslint": "8.0.1",
     "jest": "27.3.1",
     "nodemon": "2.0.14",
-    "supertest": "6.1.6"
+    "supertest": "^6.1.6"
   }
 }
